--- a/package.json
+++ b/package.json
@@ -1,81 +1,52 @@
 {
-  "name": "ngx-vertical-tabs",
+  "name": "estabulo-app",
   "version": "0.0.0",
-  "description": "Vertical Tabs for Angular Applications.",
-  "main": "./bundles/ngx-vertical-tabs.umd.js",
-  "module": "./ngx-vertical-tabs.es5.js",
-  "es2015": "./ngx-vertical-tabs.js",
-  "typings": "./ngx-vertical-tabs.d.ts",
-  "author": "Brion Silva",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/brionmario/ngx-vertical-tabs.git"
-  },
-  "engines": {
-    "node": ">= 6.9.0",
-    "npm": ">= 3.0.0"
-  },
   "scripts": {
-    "clean": "rimraf out-tsc dist/*",
-    "prebuild": "npm run clean",
-    "build": "node build.js",
-    "build-demo": "tsc -p src/demo/",
-    "build-demo:watch": "tsc -p src/demo/ -w",
-    "serve": "lite-server -c=bs-config.json",
-    "prestart": "npm run build-demo",
-    "start": "concurrently \"npm run build-demo:watch\" \"npm run serve\"",
-    "build-test": "tsc -p src/lib/tsconfig.spec.json",
-    "build-test:watch": "tsc -p src/lib/tsconfig.spec.json -w",
-    "pretest": "npm run build-test",
-    "test": "concurrently \"npm run build-test:watch\" \"karma start karma.conf.js\"",
-    "coverage": "karma start karma-coverage.conf.js --single-run",
-    "pretest:once": "npm run build-test",
-    "test:once": "karma start karma.conf.js --single-run",
-    "preintegration": "npm run build && cd integration && npm run clean && npm install",
-    "integration": "npm run integration:aot && npm run integration:jit",
-    "integration:jit": "cd integration && npm run e2e",
-    "integration:aot": "cd integration && npm run e2e:aot",
-    "lint": "tslint ./src/**/*.ts -t verbose",
-    "release": "standard-version"
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
-  "peerDependencies": {
-    "@angular/core": ">=4.0.0 <5.0.0 || >=4.0.0-beta <5.0.0"
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^6.1.0",
+    "@angular/common": "^6.1.0",
+    "@angular/compiler": "^6.1.0",
+    "@angular/core": "^6.1.0",
+    "@angular/forms": "^6.1.0",
+    "@angular/http": "^6.1.0",
+    "@angular/platform-browser": "^6.1.0",
+    "@angular/platform-browser-dynamic": "^6.1.0",
+    "@angular/router": "^6.1.0",
+    "core-js": "^2.5.4",
+    "rxjs": "^6.0.0",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular/common": "~4.1.3",
-    "@angular/compiler": "~4.1.3",
-    "@angular/compiler-cli": "~4.1.3",
-    "@angular/core": "~4.1.3",
-    "@angular/platform-browser": "~4.1.3",
-    "@angular/platform-browser-dynamic": "~4.1.3",
-    "@types/jasmine": "2.5.36",
-    "@types/node": "^6.0.46",
-    "camelcase": "^4.0.0",
-    "concurrently": "3.4.0",
-    "core-js": "^2.4.1",
-    "glob": "^7.1.1",
-    "jasmine-core": "^2.5.2",
-    "karma": "^1.5.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-coverage": "^1.1.1",
-    "karma-html-reporter": "^0.2.7",
-    "karma-jasmine": "^1.1.0",
+    "@angular-devkit/build-angular": "~0.7.0",
+    "@angular-devkit/build-ng-packagr": "~0.7.0",
+    "@angular/cli": "~6.1.2",
+    "@angular/compiler-cli": "^6.1.0",
+    "@angular/language-service": "^6.1.0",
+    "@types/jasmine": "~2.8.6",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~4.2.1",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~1.7.1",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.0",
+    "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-remap-coverage": "^0.1.4",
-    "lite-server": "^2.2.2",
-    "rimraf": "^2.6.1",
-    "rollup": "^0.42.0",
-    "rollup-plugin-sourcemaps": "^0.4.1",
-    "rollup-plugin-uglify": "^2.0.1",
-    "rollup-plugin-commonjs": "^8.0.2",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rxjs": "^5.0.1",
-    "standard-version": "^4.0.0",
-    "systemjs": "^0.19.40",
-    "tslint": "^4.4.2",
-    "typescript": "~2.3.0",
-    "zone.js": "^0.8.4"
+    "ng-packagr": "^3.0.0",
+    "protractor": "~5.3.0",
+    "ts-node": "~5.0.1",
+    "tsickle": ">=0.29.0",
+    "tslib": "^1.9.0",
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
   }
 }
