chore(lint): add sass lint support to demo and lib projects

--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
         "start": "ng serve",
         "build": "ng build",
         "test": "ng test",
-        "lint": "ng lint",
+        "lint:demo:ts": "ng lint estabulo-demo",
+        "lint:demo:sass": "sass-lint --config src/.sass-lint.yml --verbose --no-exit",
+        "lint:demo": "npm run lint:demo:ts && npm run lint:demo:sass",
+        "lint:lib:ts": "ng lint estabulo",
+        "lint:lib:sass": "sass-lint --config projects/estabulo/.sass-lint.yml --verbose --no-exit",
+        "lint:lib": "npm run lint:lib:ts && npm run lint:lib:sass",
+        "lint": "npm run lint:demo && npm run lint:lib",
         "e2e": "ng e2e"
     },
     "private": true,
