--- a/package.json
+++ b/package.json
@@ -1,59 +1,56 @@
 {
-    "name": "estabulo-demo",
-    "version": "0.1.0",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build",
-        "test": "ng test",
-        "lint:demo:ts": "ng lint estabulo-demo",
-        "lint:demo:sass": "sass-lint --config src/.sass-lint.yml --verbose --no-exit",
-        "lint:demo": "npm run lint:demo:ts && npm run lint:demo:sass",
-        "lint:lib:ts": "ng lint estabulo",
-        "lint:lib:sass": "sass-lint --config projects/estabulo/.sass-lint.yml --verbose --no-exit",
-        "lint:lib": "npm run lint:lib:ts && npm run lint:lib:sass",
-        "lint": "npm run lint:demo && npm run lint:lib",
-        "e2e": "ng e2e"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "^6.1.0",
-        "@angular/common": "^6.1.0",
-        "@angular/compiler": "^6.1.0",
-        "@angular/core": "^6.1.0",
-        "@angular/forms": "^6.1.0",
-        "@angular/http": "^6.1.0",
-        "@angular/platform-browser": "^6.1.0",
-        "@angular/platform-browser-dynamic": "^6.1.0",
-        "@angular/router": "^6.1.0",
-        "core-js": "^2.5.4",
-        "rxjs": "^6.0.0",
-        "zone.js": "~0.8.26"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "~0.7.0",
-        "@angular-devkit/build-ng-packagr": "~0.7.0",
-        "@angular/cli": "~6.1.2",
-        "@angular/compiler-cli": "^6.1.0",
-        "@angular/language-service": "^6.1.0",
-        "@types/jasmine": "~2.8.6",
-        "@types/jasminewd2": "~2.0.3",
-        "@types/node": "~8.9.4",
-        "codelyzer": "~4.2.1",
-        "jasmine-core": "~2.99.1",
-        "jasmine-spec-reporter": "~4.2.1",
-        "karma": "~1.7.1",
-        "karma-chrome-launcher": "~2.2.0",
-        "karma-coverage-istanbul-reporter": "~2.0.0",
-        "karma-jasmine": "~1.1.1",
-        "karma-jasmine-html-reporter": "^0.2.2",
-        "ng-packagr": "^3.0.0",
-        "protractor": "~5.3.0",
-        "sass-lint": "^1.12.1",
-        "ts-node": "~5.0.1",
-        "tsickle": ">=0.29.0",
-        "tslib": "^1.9.0",
-        "tslint": "~5.9.1",
-        "typescript": "~2.7.2"
-    }
+  "name": "estabulo-app",
+  "version": "0.1.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint:app:ts": "ng lint estabulo-app",
+    "lint:app:sass": "sass-lint --config src/.sass-lint.yml --verbose --no-exit",
+    "lint:app": "npm run lint:demo:ts && npm run lint:demo:sass",
+    "lint:lib:ts": "ng lint estabulo",
+    "lint:lib:sass": "sass-lint --config projects/estabulo/.sass-lint.yml --verbose --no-exit",
+    "lint:lib": "npm run lint:lib:ts && npm run lint:lib:sass",
+    "lint": "npm run lint:demo && npm run lint:lib",
+    "e2e": "ng e2e"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "~8.0.0",
+    "@angular/common": "~8.0.0",
+    "@angular/compiler": "~8.0.0",
+    "@angular/core": "~8.0.0",
+    "@angular/forms": "~8.0.0",
+    "@angular/platform-browser": "~8.0.0",
+    "@angular/platform-browser-dynamic": "~8.0.0",
+    "@angular/router": "~8.0.0",
+    "rxjs": "~6.4.0",
+    "tslib": "^1.9.0",
+    "zone.js": "~0.9.1"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.800.0",
+    "@angular-devkit/build-ng-packagr": "~0.800.0",
+    "@angular/cli": "~8.0.1",
+    "@angular/compiler-cli": "~8.0.0",
+    "@angular/language-service": "~8.0.0",
+    "@types/node": "~8.9.4",
+    "@types/jasmine": "~3.3.8",
+    "@types/jasminewd2": "~2.0.3",
+    "codelyzer": "^5.0.0",
+    "jasmine-core": "~3.4.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.1.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "ng-packagr": "^5.1.0",
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tsickle": "^0.35.0",
+    "tslint": "~5.15.0",
+    "typescript": "~3.4.3"
+  }
 }
