--- a/projects/estabulo/package.json
+++ b/projects/estabulo/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "estabulo",
-    "version": "0.1.0",
-    "peerDependencies": {
-        "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
-        "@angular/core": "^6.0.0-rc.0 || ^6.0.0"
-    }
+  "name": "estabulo",
+  "version": "0.1.0",
+  "peerDependencies": {
+    "@angular/common": "^8.0.1",
+    "@angular/core": "^8.0.1"
+  }
 }
